--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "application-name",
+  "name": "dropstore-ng-example-todo",
   "version": "0.0.1",
   "private": true,
   "repository": {
@@ -7,7 +7,6 @@
     "url": "git://github.com/analogj/node-angular-less-seed.git"
   },
   "dependencies": {
-    "connect": "~2.8.4",
-    "nconf": "~0.6.7"
+    "connect": "~2.8.4"
   }
 }
